RESOLVED FIXED154933
Crashes in media tests after http://trac.webkit.org/changeset/197461
https://bugs.webkit.org/show_bug.cgi?id=154933
Summary Crashes in media tests after http://trac.webkit.org/changeset/197461
Beth Dakin
Reported 2016-03-02 15:39:25 PST
Crashes in media tests after http://trac.webkit.org/changeset/197461
Attachments
Patch (2.51 KB, patch)
2016-03-02 15:42 PST, Beth Dakin
eric.carlson: review+
Beth Dakin
Comment 1 2016-03-02 15:42:19 PST
Eric Carlson
Comment 2 2016-03-02 15:46:33 PST
Comment on attachment 272697 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=272697&action=review > Source/WebKit2/ChangeLog:8 > + Since the controlsManagerInterface is not guaranteed to exist, it doesnât "smart" quote?
Beth Dakin
Comment 3 2016-03-02 15:50:39 PST
Note You need to log in before you can comment on or make changes to this bug.