Crashes in media tests after http://trac.webkit.org/changeset/197461 https://bugs.webkit.org/show_bug.cgi?id=154933

Reviewed by Eric Carlson.

Since the controlsManagerInterface is not guaranteed to exist, it doesn't
make sense to return a reference. Return a pointer instead.
* UIProcess/Cocoa/WebVideoFullscreenManagerProxy.h:
* UIProcess/Cocoa/WebVideoFullscreenManagerProxy.mm:
(WebKit::WebVideoFullscreenManagerProxy::isVisible):
(WebKit::WebVideoFullscreenManagerProxy::controlsManagerInterface):
(WebKit::WebVideoFullscreenManagerProxy::fullscreenMayReturnToInline):



Canonical link: https://commits.webkit.org/173019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197469 268f45cc-cd09-0410-ab3c-d52691b4dbfc